word 2 times updte

--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
 
       <div class="skill-row">
         <img class="skill-2" src="images/word.png" alt="">
-        <h3>Powerpoint</h3>
-        <p>Intermediate skills  i Custom Slides and Templates using text, pictures, graphics, and spreadsheet tables
-            SmartArt & Text Boxes and Animation</p>
+        <h3>Word</h3>
+        <p>Intermediate skills in Creating designs or mock-ups for printed materials, Formatting documentsProofreading with Microsoft tools,
+            Incorporating graphs or charts into reports or other documents, Building templates</p>
+
       </div>
 
       <div class="skill-row">
