--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="skill-row">
         <img class="javascript-img" src="images/powerpoint.png" alt="">
         <h3>Powerpoint</h3>
-        <p>IIntermediate skills Custom Slides and Templates using text, pictures, graphics, and spreadsheet tables and Animation.</p>
+        <p>Intermediate skills Custom Slides and Templates using text, pictures, graphics, and spreadsheet tables and Animation.</p>
       </div>
     </div>
     <hr>
